fix: change catalog__search flex-wrap

--- a/src/assets/style/components/_search.scss
+++ b/src/assets/style/components/_search.scss
@@ -1,5 +1,7 @@
 .search {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   margin-bottom: rem(24);
 
@@ -15,12 +17,13 @@
 
     padding: rem(12);
     margin-right: rem(12);
+    margin-bottom: rem(24);
   }
 
   &__result {
     display: flex;
-    min-width: rem(100);
     align-items: center;
     justify-content: flex-end;
+    font-size: rem(20);
   }
 }
